# Comfy-Inpainting-Works

./: .gitignore  CHANGELOG.md  README.md  __init__.py  pyproject.toml
#COMPACT_Workflow/: COMPACT Flux Control-Net inpainting with batch v8.13C.json  COMPACT Flux Control-Net inpainting with batch v9.0.1C.json  COMPACT Flux Control-Net inpainting with batch v9.0.2C.json  COMPACT Flux Control-Net inpainting with batch v9.1.0C.json
#COMPACT_Workflow/older_versions/: COMPACT Flux Control-Net inpainting with batch_v7.0C.json  COMPACT Flux Control-Net inpainting with batch_v7.2C.json
#EXPANDED_Workflow/: Flux Control-Net inpainting with batch v10.0.0.json  Flux Control-Net inpainting with batch v9.0.1.json
#EXPANDED_Workflow/older_versions/: Flux Control-Net inpainting with batch v8.12.json  Flux Control-Net inpainting with batch v9.0.0.json  Flux Control-Net inpainting with batch v9.0.2-1.json  Flux Control-Net inpainting with batch v9.0.2.json  Flux Control-Net inpainting with batch_v6.3.json  Flux Control-Net inpainting with batch_v6.51.json  Flux Control-Net inpainting with batch_v7.2.json  Flux Control-Net inpainting with batch_v7.31.json
#other_works/SIMPLIFIED Proper Flux Kontext inpainting/: SIMPLIFIED Proper Flux Kontext inpainting v1.0.json
COMPACT_Workflow/: COMPACT Flux Control-Net inpainting with batch v8.12C.json  COMPACT Flux Control-Net inpainting with batch v8.1C.json  COMPACT Flux Control-Net inpainting with batch.json
COMPACT_Workflow/older_versions/: COMPACT Flux Control-Net inpainting with batch v8.001C.json  COMPACT Flux Control-Net inpainting with batch v8.1C.json  COMPACT Flux Control-Net inpainting with batch_v6.51C.json  COMPACT Flux Control-Net inpainting with batch_v7.1C.json
EXPANDED_Workflow/: Flux Control-Net inpainting with batch v8.1.json  Flux Control-Net inpainting with batch.json
EXPANDED_Workflow/older_versions/: Flux Control-Net inpainting with batch v.8.0.json  (+9 more)
example_workflows/: COMPACT Flux Control-Net inpainting with batch.json  ComfyUI Workflows_Browse Templetes.txt
(+11 files in other folders)
